@@ -26,31 +26,31 @@
             <version>3.7.0</version>
         </dependency>
         <dependency>
-            <groupId>de.jensd</groupId>
-            <artifactId>fontawesomefx-commons</artifactId>
-            <version>9.1.2</version>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>11.0.1</version>
         </dependency>
         <dependency>
-            <groupId>de.jensd</groupId>
-            <artifactId>fontawesomefx-controls</artifactId>
-            <version>9.1.2</version>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc10</artifactId>
+            <version>19.7.0.0</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.openjfx</groupId>-->
-<!--            <artifactId>javafx-web</artifactId>-->
-<!--            <version>11</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.openjfx</groupId>-->
-<!--            <artifactId>javafx-fxml</artifactId>-->
-<!--            <version>11</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.openjfx</groupId>-->
-<!--            <artifactId>javafx</artifactId>-->
-<!--            <version>11</version>-->
-<!--            <type>pom</type>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>11.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>11.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx</artifactId>
+            <version>11.0.1</version>
+            <type>pom</type>
+        </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-weathericons-pack</artifactId>
@@ -76,27 +76,14 @@
             <artifactId>commons-logging</artifactId>
             <version>1.1.1</version>
         </dependency>
-        <dependency>
-            <groupId>de.jensd</groupId>
-            <artifactId>fontawesomefx</artifactId>
-            <version>8.9</version>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-crypto</artifactId>
             <version>5.3.3.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>com.calendarfx</groupId>
-            <artifactId>view</artifactId>
-            <version>11.8.3</version>
-        </dependency>
-
-
-
     </dependencies>
     <packaging>jar</packaging>
-
     <build>
         <sourceDirectory>src</sourceDirectory>
         <resources>
@@ -118,6 +105,37 @@
                 <version>3.1.0</version>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
+            <plugin>
+            <groupId>io.github.fvarrui</groupId>
+            <artifactId>javapackager</artifactId>
+            <version>1.1.0</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>package</goal>
+                    </goals>
+                    <configuration>
+                        <!-- mandatory -->
+                        <mainClass>main.java.Main</mainClass>
+                        <bundleJre>true</bundleJre>
+                        <iconFile>src/main/resources/project.ico</iconFile>
+                        <licenseFile>LICENSE</licenseFile>
+                        <!-- optional -->
+                        <winConfig>
+                            <generateMsi>true</generateMsi>
+                            <generateSetup>false</generateSetup>
+                        </winConfig>
+
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+            <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
@@ -137,16 +155,10 @@
                     <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
                     <option>--add-opens</option>
                     <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
-                    <option>--add-exports</option>
-                    <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
-                    <option>--add-exports</option>
-                    <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
-                    <option>--add-exports</option>
-                    <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
-                    <option>--add-exports</option>
-                    <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
-                    <option>--add-exports</option>
-                    <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
+                    <option>--add-opens</option>
+                    <option>javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</option>
+                    <option>--add-opens</option>
+                    <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                 </options>
                     <mainClass>main.java.Main</mainClass>
                     <includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
@@ -172,12 +184,12 @@
                 </executions>
             </plugin>
         </plugins>
+
     </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-
     </properties>
 </project>
